refresh method updated